--- a/vercel.json
+++ b/vercel.json
@@ -1,8 +1,7 @@
 {
   "build": {
     "env": {
-      "NODE_ENV": "production"
-    },
-    "command": "npm install --legacy-peer-deps && npm run build"
+      "NPM_FLAGS": "--legacy-peer-deps"
+    }
   }
 }
